namespace WarriorSystem.Anim
{
    public static class WarriorSkillAnim
    {
        public static string QUICK_ATTACK_TRIGGER = "QuickAttackTrigger";
        public static string STRONG_ATTACK_TRIGGER = "StrongAttackTrigger";
        public static string DEFENCE_TRIGGER = "DefenceTrigger";
    }
}
